--- a/style.css
+++ b/style.css
@@ -161,6 +161,9 @@ body {
 #resume .col-2-container {
 	width: 63%;
 }
+#resume .col-2-container .section-wrap {
+	margin-bottom: 45px;
+}
 #resume .col-2-container .section-heading {
 	text-transform: uppercase;
 	color: #000;
@@ -289,12 +292,4 @@ body {
 	width: 100%;
 	max-width: 100%;
 	margin-top: 30px;
-}
-
-#resume .col-2-container .break-blank {
-	flex: none;
-	height: 0px;
-	width: 100%;
-	max-width: 100%;
-	margin-top: 60px;
 }
