--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ body {
 }
 #resume .col-2-container .section-wrap {
 	margin-bottom: 45px;
+	border: 1px solid red;
 }
 #resume .col-2-container .section-heading {
 	text-transform: uppercase;
