--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 	margin: 0;
 }
 #masthead .urls a:hover {
-	background-color: #000;
+	background-color: #0a66c2;
 }
 #masthead .urls a svg {
 	width: 13px;
