--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 * {
 	box-sizing: border-box;
 }
-.animate {
+.section-wrap.animate {
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
-.animate.visible {
+
+.section-wrap.animate.visible {
   opacity: 1;
   transform: translateY(0);
 }
+
 
 body {
 	text-rendering: optimizeLegibility;
