--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 	box-sizing: border-box;
 }
 
-/* Base (hidden) */
 .animate {
   opacity: 0;
   transform: translateY(30px);
@@ -10,14 +9,10 @@
   will-change: opacity, transform;
 }
 
-/* Revealed on scroll */
 .animate.visible {
   opacity: 1;
   transform: translateY(0);
 }
-
-
-
 
 
 body {
@@ -30,10 +25,8 @@ body {
 	z-index: 1000;
 	height: 60px;
 	margin: 0;
-	transition-delay: 0ms;
-	transition-duration: 1000ms;
-	width: calc(100% - 40px);
-	max-width: calc(100% - 40px);
+	width: 100%;
+	max-width: 100%;
 	background-color: #fff;
 }
 #header p {
@@ -59,10 +52,12 @@ body {
 	color: rgba(0,0,0,1.0);
 	text-decoration: none;
 	transition: .3s ease;
+	border-bottom: 1px dotted transparent;
 }
 #header a:hover {
 	color: rgba(0,0,0,0.7);
 	transition: .3s ease;
+	border-bottom: 1px dotted rgba(0,0,0,0.7);
 }
 
 #container-wrap {
@@ -82,7 +77,7 @@ body {
 	align-items: flex-end;
 }
 #masthead .txt  {
-	width: 70%;
+	width: 90%;
 	color: #000;
 	font-family: "aptos-display", sans-serif;
 	font-weight: 400;
@@ -98,7 +93,7 @@ body {
 	font-style: italic;
 }
 #masthead .urls {
-	width: 30%;
+	width: 10%;
 	display: flex;
 	justify-content: flex-end;
 }
@@ -117,16 +112,20 @@ body {
 #masthead .urls a:hover {
 	background-color: #0a66c2;
 }
-#masthead .urls a svg {
+#masthead .urls a svg.linkedin-small {
 	width: 13px;
 	height: 13px;
 	fill: #000;
+	display: inline;
 }
-#masthead .urls a svg:hover {
+#masthead .urls a svg.linkedin-small:hover {
 	fill: #fff;
 }
-#masthead .urls a:hover > svg {
+#masthead .urls a:hover > svg.linkedin-small {
 	fill: #fff;
+}
+#masthead .urls a svg.linkedin-large {
+	display: none;
 }
 
 #resume {
@@ -146,8 +145,7 @@ body {
 	height: 200px;
 	width: 200px;
 	border-radius: 50%;
-	transition-delay: 300ms;
-	transition-duration: 1000ms;
+	transition: .5s ease;
 }
 #resume .col-1-container .name {
 	color: #000;
@@ -175,21 +173,19 @@ body {
 	margin: 35px 0px 0px 0px;
 	padding: 0px;
 	text-align: justify;
-	width: 600px;
+	
 	max-width: 100%;
 }
 #resume .col-1-container .at-a-glance {
 	align-content: center;
 	align-items: center;
-	flex-direction: column;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 	justify-content: center;
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	max-width: 100%;
 	display: flex;
-	flex: none;
 	position: relative;
 	text-transform: uppercase;
 }
@@ -215,6 +211,11 @@ body {
 	font-size: 13px;
 	font-weight: 700;
 	line-height: 0;
+	min-width: max-content;
+	column-gap: 10px;
+}
+#resume .col-1-container .at-a-glance div p.light {
+color: rgba(0,0,0,0.7);
 }
 #resume .col-1-container .at-a-glance .line-2 {
 	border: none;
@@ -513,4 +514,69 @@ div#download-as a svg {
 	height: 18px;
 	display: inline-block;
 	vertical-align: top;
+}
+
+@media (max-width: 768px) {
+	#resume {
+		display: inline-block;
+	}
+	#resume .col-1-container, #resume .col-2-container {
+		width: 100%;
+	}
+	#resume p {
+		text-align: left;
+	}
+	#resume .col-1-container .bio p {
+		text-align: center;
+	}
+	#resume .pfp {
+		text-align: center;
+	}
+	#resume .col-1-container .pfp img {
+		border-radius: 16px;
+		width: 100%;
+		height: auto;
+		transition: 2s ease;
+	}
+	#resume .section-heading {
+		text-align: center;
+	}
+	#masthead {
+		flex-direction: column;
+		row-gap: 30px;
+		align-items: center;
+	}
+	#masthead .txt {
+		width: 100%;
+		justify-content: center;
+	}
+	#masthead .urls {
+		width: 100%;
+		justify-content: center;
+	}
+	#masthead .urls a svg.linkedin-small {
+		display: none;
+	}
+	#masthead .urls a svg.linkedin-large {
+		display: inline;
+		height: 30px;
+		width: auto;
+		border: none;
+	}
+	#masthead .urls a {
+		border-radius: 0;
+		border: 1px solid rgba(0, 0, 0, 0.1);
+		padding: 30px;
+		width: 100%;
+		max-width: 100%;
+		height: 40px;
+	}
+	#masthead .urls a:hover {
+		background: radial-gradient(circle,
+		rgba(253, 253, 253, 1) 0%,
+		rgba(252, 252, 252, 1) 30%,
+		rgba(250, 250, 250, 1) 70%,
+		rgba(249, 249, 249, 1) 100%);
+	}
+
 }
