--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 * {
 	box-sizing: border-box;
 }
-
+html, body {
+  	margin: 0;
+  	padding: 0;
+  	box-sizing: border-box;
+  	text-rendering: optimizeLegibility;
+	overflow: visible;
+}
 .animate {
   opacity: 0;
   transform: translateY(30px);
@@ -15,50 +21,97 @@
 }
 
 
-body {
-	text-rendering: optimizeLegibility;
+.site-header {
+	position: relative;
+	width: 100%;
+	height: 50px;
+	background: #000;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-#header {
+#logo {
+	position: absolute;
+	left: calc(50% - 580px);
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	align-items: center;
+}
+.sticky-nav {
 	position: sticky;
 	top: 0;
-	background: #fff;
 	z-index: 1000;
-	height: 60px;
-	margin: 0;
-	width: 100%;
-	max-width: 100%;
-	background-color: #fff;
+	background: transparent;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: -50px;
 }
-#header p {
-	color: #000;
+.site-header #logo svg#logo-mp {
+	height: 32px;
+	width: auto;
+}
+.site-header div#logo svg#logo-mp .m {
+	fill: #fff;
+}
+.site-header div#logo svg#logo-mp .p {
+	fill: rgba(255,255,255,0.35);
+}
+.nav-center {
+	display: flex;
+	gap: 0;
+	justify-content: center;
+	align-items: center;
+}
+.nav-center a {
 	font-family: "aptos-display", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	font-size: 17px;
-	height: auto;
 	line-height: 1.5;
-	text-align: center;
+	height: auto;
 	width: auto;
-	max-width: 100%;
-	justify-content: center;
-}
-#header header {
 	display: flex;
-	flex-wrap: nowrap;
+	align-items: center;
+	align-content: center;
 	justify-content: center;
-	column-gap: 3em;
-}
-#header a {
-	color: rgba(0,0,0,1.0);
+	background-color: rgba(0,0,0,0.9);
+	border: none;
+	color: #fff;
 	text-decoration: none;
 	transition: .3s ease;
-	border-bottom: 1px dotted transparent;
+	padding: 10px 15px;
+
 }
-#header a:hover {
-	color: rgba(0,0,0,0.7);
+.nav-center a:active {
+	color: red;
+}
+.nav-center a:hover {
+	color: #fff;
 	transition: .3s ease;
-	border-bottom: 1px dotted rgba(0,0,0,0.7);
+	background-color: #303030;
+
 }
+
+.nav-center a.left {
+	border-radius: 32px 0px 0px 32px;
+	padding-left: 25px;
+}
+.nav-center a.middle {
+	border-radius: 0px;
+}
+.nav-center a.right {
+	border-radius: 0px 32px 32px 0px;
+	padding-right: 25px;
+}
+
+
+
+
+
+
 
 #container-wrap {
 	display: flex;
@@ -67,7 +120,7 @@ body {
 }
 #container {
 	margin: 0px 20px 0px ;
-	width: 1160px;
+	width: 1150px;
 	max-width: calc(100% - 40px);
 }
 
@@ -485,13 +538,14 @@ div#download-as {
 	font-weight: 600;
 	font-style: normal;
 	font-size: 13px;
-	margin: 30px 0px;
+	margin: 45px 0px 30px 0px;
 	display: flex;
 	column-gap: 4px;
 	flex-wrap: nowrap;
 	justify-content: flex-end;
 	align-items: baseline;
 	align-content: center;
+
 }
 div#download-as a {
 	color: rgba(0,0,0,0.8);
