--- a/style.css
+++ b/style.css
@@ -567,8 +567,9 @@ footer {
 	align-items: center;
 	align-content: center;
 	border-top: 1px solid rgba(0,0,0,0.1);
-	margin: 0px 40px;
+	margin: 30px auto 0px auto;
 	padding: 15px 0px;
+	max-width: calc(100% - 40px);
 }
 footer div {
 	font-family: "aptos-display", sans-serif;
@@ -580,6 +581,7 @@ footer div {
 	margin: 0;
 	padding: 0;
 	text-align: center;
+
 }
 footer p {
 	margin: 0;
