--- a/style.css
+++ b/style.css
@@ -614,6 +614,7 @@ div#download-as a svg {
 	text-decoration: none;
 	color: #000;
 	border-bottom: 1px dotted #000;
+	padding-bottom: 2px;
 	transition: all 0.3s ease;
 }
 .reference a:hover {
