--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ html, body {
 main {
 	height: auto;
 	min-height: 1000px;
+	padding: 45px 0px;
 }
 #container-wrap {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	margin-top: 45px;
 }
 #container {
 	margin: 0px 20px 0px ;
@@ -46,7 +46,7 @@ h1 {
 }
 #logo {
 	position: absolute;
-	left: calc(50% - 580px);
+	left: calc(50% - 575px);
 	top: 50%;
 	transform: translateY(-50%);
 	display: flex;
@@ -567,6 +567,87 @@ div#download-as a svg {
 	vertical-align: top;
 }
 
+
+h1.portfolio {
+	color: #fff;
+	text-align: center;
+	width: 100%;
+	font-weight: 900;
+	font-family: "aptos", sans-serif;
+	font-style: normal;
+	margin-bottom: 120px;
+}
+#portfolio .featured-intro {
+	color: #C8C8C8;
+	text-transform: uppercase;
+	font-family: "aptos-display", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 12px;
+	margin-bottom: 10px;
+	line-height: 1;
+}
+#portfolio .featured-intro::before {
+	content: "[";
+	margin-right: 1px;
+}
+#portfolio .featured-intro::after {
+	content: "]";
+	margin-left: 1px;
+}
+#portfolio #featured-wrap {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
+	column-gap: 12px;
+	row-gap: 12px;
+}
+#portfolio #featured-wrap .img-container {
+	position: relative;
+	width: 375.33px;
+  	height: 281.5px;
+	border-radius: 16px;
+  	overflow: hidden;
+}
+#portfolio #featured-wrap .img-container img {
+	width: 100%;
+  	height: 100%;
+  	object-fit: cover;
+	display: block;
+}
+#portfolio #featured-wrap .img-container a img {
+	transition: transform 0.3s ease;
+}
+#portfolio #featured-wrap .img-container a img:hover {
+	transform: scale(1.03);
+	filter: brightness(1.08);
+	transition: transform 0.3s ease;
+}
+
+#portfolio #featured-wrap .img-container .caption {
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	color: #fff;
+	font-family: "aptos-display", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	background-color: rgba(0, 0, 0, 0.7);
+	padding: 4px 8px;
+	border-radius: 2px;
+	text-transform: uppercase;
+}
+#portfolio #featured-wrap .img-container .caption::before {
+	content: "[";
+	margin-right: 2px;
+}
+#portfolio #featured-wrap .img-container .caption::after {
+	content: "]";
+	margin-left: 2px;
+}
+
 #references {
 	display: flex;
 	justify-content: flex-start;
@@ -627,7 +708,7 @@ footer {
 	align-items: center;
 	align-content: center;
 	border-top: 1px solid rgba(0,0,0,0.1);
-	margin: 30px auto 0px auto;
+	margin: 0px auto;
 	padding: 15px 0px;
 	max-width: 100%;
 	background-color: #000;
