--- a/style.css
+++ b/style.css
@@ -60,6 +60,18 @@ h1 {
 	height: 50px;
 	width: auto;
 }
+#logo-large svg#logo-mp-large {
+	opacity: 0;
+	transform: scale(0.8);
+	animation: fadeInScale 0.8s ease-out forwards;
+}
+@keyframes fadeInScale {
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
 #logo-large svg#logo-mp-large .m {
 	fill: #fff;
 }
