--- a/style.css
+++ b/style.css
@@ -637,8 +637,8 @@ h1.portfolio {
   	overflow: hidden;
 }
 #portfolio #featured-wrap .img-container img {
-	width: 100%;
-  	height: 100%;
+	width: 375.33px;
+  	height: auto;
   	object-fit: cover;
 	display: block;
 }
