--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@ html, body {
   	text-rendering: optimizeLegibility;
 	overflow: visible;
 }
+body#portfolio-background {
+background: linear-gradient(
+    to bottom, 
+    #141414 0%,  /* Darkest Gray */
+    #0f0f0f 25%, 
+    #0a0a0a 50%, 
+    #050505 75%, 
+    #000000 100% /* Pure Black */
+  );
+}
 main {
 	height: auto;
 	min-height: 1000px;
@@ -39,7 +49,14 @@ h1 {
 	position: relative;
 	width: 100%;
 	height: 50px;
-	background: #000;
+	background: linear-gradient(
+    to bottom, 
+    #141414 0%,  /* Darkest Gray */
+    #0f0f0f 25%, 
+    #0a0a0a 50%, 
+    #050505 75%, 
+    #000000 100% /* Pure Black */
+  );
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -55,10 +72,13 @@ h1 {
 #logo-large {
 	text-align: center;
 	margin-bottom: 25px;
+	
 }
 #logo-large svg {
 	height: 50px;
 	width: auto;
+	filter: drop-shadow(0px 0px 8px #000);
+  ;
 }
 #logo-large svg#logo-mp-large {
 	opacity: 0;
@@ -117,20 +137,35 @@ h1 {
 	align-items: center;
 	align-content: center;
 	justify-content: center;
-	background-color: rgba(0,0,0,0.9);
+	background: linear-gradient(
+    to bottom, 
+    #141414 0%,  /* Darkest Gray */
+    #0f0f0f 25%, 
+    #0a0a0a 50%, 
+    #050505 75%, 
+    #000000 100% /* Pure Black */
+  );
 	border: none;
 	color: #fff;
 	text-decoration: none;
 	transition: .3s ease;
 	padding: 10px 15px;
-
+	opacity: 1;
+	text-shadow: 0px 0px 2px #000;
 }
 
 .nav-center a:hover {
 	color: #fff;
 	transition: .3s ease;
-	background-color: #303030;
-
+	text-decoration: underline;
+	background: linear-gradient(
+    to bottom, 
+    #202020 0%,  /* Darkest Gray */
+    #202020 25%, 
+    #202020 50%, 
+    #202020 75%, 
+    #202020 100% /* Pure Black */
+  );
 }
 .nav-center a.left {
 	border-radius: 32px 0px 0px 32px;
@@ -602,6 +637,7 @@ h1.portfolio {
 	font-family: "aptos", sans-serif;
 	font-style: normal;
 	margin-bottom: 120px;
+	text-shadow: 0px 0px 15px #000;
 }
 #portfolio .featured-intro {
 	color: #C8C8C8;
@@ -635,6 +671,7 @@ h1.portfolio {
   	height: 281.5px;
 	border-radius: 16px;
   	overflow: hidden;
+	filter: drop-shadow(0px 0px 12px #000);
 }
 
 #portfolio #featured-wrap .img-container img {
@@ -732,7 +769,14 @@ footer {
 	margin: 0px auto;
 	padding: 15px 0px;
 	max-width: 100%;
-	background-color: #000;
+	background: linear-gradient(
+    to bottom, 
+    #141414 0%,  /* Darkest Gray */
+    #0f0f0f 25%, 
+    #0a0a0a 50%, 
+    #050505 75%, 
+    #000000 100% /* Pure Black */
+  );
 }
 footer div {
 	font-family: "aptos-display", sans-serif;
