--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 #logo-large {
 	text-align: center;
 	margin-bottom: 25px;
-	
+	filter: drop-shadow(0px 0px 12px #000);
 }
 #logo-large svg {
 	height: 50px;
@@ -131,10 +131,11 @@ h1 {
 	font-style: normal;
 	font-size: 17px;
 	line-height: 1.5;
-	height: auto;
-	width: auto;
+	width: 115px;
+	height: 50px;
 	display: flex;
 	align-items: center;
+	align-self: center;
 	align-content: center;
 	justify-content: center;
 	background: linear-gradient(
@@ -638,6 +639,10 @@ h1.portfolio {
 	font-style: normal;
 	margin-bottom: 120px;
 	text-shadow: 0px 0px 15px #000;
+}
+#portfolio .featured-intro-wrap {
+	display: flex;
+	justify-content: space-between;
 }
 #portfolio .featured-intro {
 	color: #C8C8C8;
