--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1 {
 	width: 100%;
 	height: 50px;
 	background: linear-gradient(
-    to bottom, 
+    to top, 
     #141414 0%,  /* Darkest Gray */
     #0f0f0f 25%, 
     #0a0a0a 50%, 
@@ -139,7 +139,7 @@ h1 {
 	align-content: center;
 	justify-content: center;
 	background: linear-gradient(
-    to bottom, 
+    to top, 
     #141414 0%,  /* Darkest Gray */
     #0f0f0f 25%, 
     #0a0a0a 50%, 
@@ -775,7 +775,7 @@ footer {
 	padding: 15px 0px;
 	max-width: 100%;
 	background: linear-gradient(
-    to bottom, 
+    to top, 
     #141414 0%,  /* Darkest Gray */
     #0f0f0f 25%, 
     #0a0a0a 50%, 
