--- a/style.css
+++ b/style.css
@@ -109,15 +109,16 @@ h1 {
 .site-header div#logo svg#logo-mp .p {
 	fill: rgba(255,255,255,0.35);
 }
+
 .nav-center {
 	display: flex;
-	gap: 45px;
+	gap: 20px;
 	justify-content: center;
 	height: 60px;
 	align-items: center;
 }
 .nav-center a {
-	font-family: "aptos-display", sans-serif;
+	font-family: "aptos", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	font-size: 17px;
@@ -127,6 +128,8 @@ h1 {
 	text-decoration: none;
 	transition: .3s ease;
 	text-shadow: 0px 0px 2px #000;
+	width: 100px;
+	text-align: center;
 }
 .nav-center a:hover {
 	color: #fff;
