--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ color: rgba(0,0,0,0.7);
 #resume .job-description p {
 	color: rgba(0,0,0,0.7);
 	font-family: "aptos", sans-serif;
-	font-size: 15px;
+	font-size: 15px !important;
 	font-weight: 400;
 	font-style: normal;
 	height: auto;
